# FORGE

./: .gitignore  README.md  dump.sh  forge_repo_clean.txt  gitkey.pub  mkdocs.yml  prov.json  pyproject.toml  pyproject.toml.bak  setup.py  states.json  test.py  test_tsgen21.py
docs/: index.md
examples/orca/: tiny.out
lab_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
labtools/: cli.py  submit.py
labtools/chem/: energetic_span.py
labtools/csvpipe/: __init__.py  emit.py  types.py
labtools/data/: io.py
labtools/fragments/: manager.py
labtools/orca/: parse.py
labtools/schemas/: __init__.py
labtools/slurm/: render.py
labtools/tsgen/: __init__.py  align.py  cli.py  collect_imag.py  constraints.py  fingerprint.py  io_xyz.py  orca_io.py  pipeline.py  pipeline_utils.py  render_orca.py  slurm.py  solvents.py  worker.py
resources/tsfp/: diels_alder.yaml  diels_alder_primary.yaml  metathesis_22_cycloadd.yaml
schemas/: env.schema.json  fragments.schema.json  mapping.schema.json  metadata.schema.json  plan.schema.json
src/lab_tools.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/labtools/: \  cli.py  submit.py
templates/mapping/: plan.mapping.yaml
templates/orca/: orca_freq.inp.j2  orca_grad.inp.j2  orca_irc.inp.j2  orca_nmr.inp.j2  orca_nmr.inp.j2.bak  orca_opt.inp.j2  orca_optfreq.inp.j2  orca_optfreq.inp.j2.bak  orca_sp.inp.j2  orca_sp_triplet.inp.j2  orca_sp_triplet.inp.j2.bak  orca_ts_opt.inp.j2  sbatch_orca.sbatch.j2  (+1 more)
tests/: planentries.jsonl  test_cli_plan_ingest.py  test_parse.py  test_plan_render_non_sp_task.py  test_plan_render_provenance.py  test_plan_render_single_entry.py  test_restart_engine.py  test_worker_restart_flow.py  test_workflow_pipeline.py  test_workflow_policy.py
(+107 files in other folders)
